galmo/force-app/main/default/objects/Opportunity/fields/Contato__c.field-meta.xml
<CustomField>
    <fullName>Contato__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Corretor (Contato)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordType.Id</field>
            <operation>equals</operation>
            <value>012Ha000000PhxsIAC</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Oportunidades</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>