galmo/force-app/main/default/objects/Opportunity/recordTypes/Locador_Propriet_rio.recordType-meta.xml
<RecordType>
    <fullName>Locador_Propriet_rio</fullName>
    <active>true</active>
    <businessProcess>Pipeline de Oportunidade - Equipe de Locação</businessProcess>
    <label>Locador/Proprietário</label>
</RecordType>